--- a/index.html
+++ b/index.html
@@ -2,65 +2,81 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>一畑電車 列車可視化</title>
+  <title>一畑電車 運行表示</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
     body { font-family: sans-serif; }
-    .station { font-size: 10px; text-anchor: middle; }
-    .train-label { font-size: 10px; dominant-baseline: middle; text-anchor: middle; pointer-events: none; }
+    .station { font-size: 12px; text-anchor: middle; }
+    .line { stroke: black; stroke-width: 2; fill: none; }
+    .time-label { font-size: 20px; font-weight: bold; text-anchor: middle; }
+    .train text { font-size: 10px; font-weight: bold; text-anchor: middle; dominant-baseline: middle; }
   </style>
 </head>
 <body>
   <svg id="map" width="1200" height="800"></svg>
+
   <script>
     const svg = d3.select("#map");
     const width = +svg.attr("width");
     const height = +svg.attr("height");
 
-    // 駅データ
-    const honStations = ["松江温泉","ガーデン前","朝日ヶ丘","長江","秋鹿町","フォーゲル","高ノ宮","津ノ森","伊野灘","一畑口","園","湖遊館新駅","布崎","雲州平田","旅伏","美談","大寺","川跡","武志","大津町","科学館前","電鉄出雲市"];
-    const shiStations = ["川跡","高浜","遥堪","浜山公園北口","出雲大社前"];
+    // 本線と支線の駅
+    const mainStations = [
+      "松江温泉","ガーデン前","朝日ヶ丘","長江","秋鹿町","フォーゲル","高ノ宮","津ノ森","伊野灘",
+      "一畑口","園","湖遊館新駅","布崎","雲州平田","旅伏","美談","大寺","川跡",
+      "武志","大津町","科学館前","電鉄出雲市"
+    ];
+    const branchStations = ["川跡","高浜","遥堪","浜山公園北口","出雲大社前"];
 
-    // 座標計算
-    const margin = 80;
-    const honX = d3.scalePoint().domain(honStations).range([margin, width - margin]);
-    const shiX = d3.scalePoint().domain(shiStations).range([margin, width - margin]);
-    const honY = height / 2;
-    const shiY = honY + 80;
+    const stationSpacing = 40;  // 駅間隔
 
-    // 本線描画
-    svg.append("line")
-      .attr("x1", honX(honStations[0]))
-      .attr("y1", honY)
-      .attr("x2", honX(honStations[honStations.length - 1]))
-      .attr("y2", honY)
-      .attr("stroke", "black")
-      .attr("stroke-width", 2);
+    // 本線座標
+    const mainCoords = mainStations.map((d,i)=>({name:d,x:100+i*stationSpacing,y:200}));
+    // 支線座標（川跡から下に降りて平行に）
+    const kawatoMain = mainCoords.find(s=>s.name==="川跡");
+    const branchCoords = branchStations.map((d,i)=>({
+      name:d,
+      x: kawatoMain.x + (i*stationSpacing),
+      y: i===0 ? kawatoMain.y+stationSpacing : kawatoMain.y+stationSpacing+50
+    }));
+    branchCoords[0].x = kawatoMain.x;
 
-    honStations.forEach(st => {
-      svg.append("circle")
-        .attr("cx", honX(st)).attr("cy", honY).attr("r", 4).attr("fill", "black");
-      svg.append("text")
-        .attr("x", honX(st)).attr("y", honY - 8).text(st).attr("class", "station");
-    });
+    // 線を描画
+    svg.append("polyline")
+      .attr("points", mainCoords.map(d=>`${d.x},${d.y}`).join(" "))
+      .attr("class","line");
+    svg.append("polyline")
+      .attr("points", branchCoords.map(d=>`${d.x},${d.y}`).join(" "))
+      .attr("class","line");
 
-    // 支線描画
-    svg.append("line")
-      .attr("x1", honX("川跡"))
-      .attr("y1", honY)
-      .attr("x2", shiX(shiStations[shiStations.length - 1]))
-      .attr("y2", shiY)
-      .attr("stroke", "black")
-      .attr("stroke-width", 2);
+    // 駅を描画
+    svg.selectAll(".station.main")
+      .data(mainCoords).enter().append("circle")
+      .attr("cx",d=>d.x).attr("cy",d=>d.y).attr("r",5).attr("fill","black");
+    svg.selectAll(".station.branch")
+      .data(branchCoords).enter().append("circle")
+      .attr("cx",d=>d.x).attr("cy",d=>d.y).attr("r",5).attr("fill","black");
 
-    shiStations.forEach((st, i) => {
-      const x = shiX(st);
-      const y = shiY;
-      svg.append("circle").attr("cx", x).attr("cy", y).attr("r", 4).attr("fill", "black");
-      svg.append("text").attr("x", x).attr("y", y - 8).text(st).attr("class", "station");
-    });
+    // 駅名ラベル
+    svg.selectAll(".station-label.main")
+      .data(mainCoords).enter().append("text")
+      .attr("x",d=>d.x).attr("y",d=>d.y-10)
+      .text(d=>d.name).attr("class","station");
+    svg.selectAll(".station-label.branch")
+      .data(branchCoords).enter().append("text")
+      .attr("x",d=>d.x).attr("y",d=>d.y+20)
+      .text(d=>d.name).attr("class","station");
 
-    // 色と文字色設定
+    // 時刻を分に変換 (hhmm → 分)
+    function parseTime(val) {
+      if (!val || isNaN(val)) return null;
+      const num = parseInt(val);
+      const hh = Math.floor(num/100);
+      const mm = num % 100;
+      return hh*60+mm;
+    }
+
+    // 列車の色と文字色を決定
     function getTrainStyle(name) {
       if (name.includes("A")) return {fill: "red", text: "white"};
       if (name.includes("B")) return {fill: "green", text: "white"};
@@ -74,95 +90,91 @@
       return {fill: "gray", text: "white"};
     }
 
-    // CSV読込
-    d3.csv("trains.csv").then(data => {
-      const trains = [];
-      data.forEach(row => {
-        const stops = [];
-        Object.keys(row).forEach(key => {
-          if (honStations.includes(key) || shiStations.includes(key)) {
-            if (row[key]) stops.push({station: key, time: parseInt(row[key])});
+    // 現在時刻をラベル表示
+    const timeLabel = svg.append("text")
+      .attr("x",width/2).attr("y",50)
+      .attr("class","time-label");
+
+    // 列車読み込み
+    d3.csv("trains.csv").then(data=>{
+      const trains = data.map(row=>{
+        const schedule = {};
+        Object.keys(row).forEach(k=>{
+          if (k!=="train_id" && k!=="train_name" && k!=="direction") {
+            schedule[k] = parseTime(row[k]);
           }
         });
-        if (stops.length > 0) {
-          trains.push({id: row.train_id, name: row.train_name, direction: row.direction, stops});
-        }
+        return {
+          id: row.train_id,
+          name: row.train_name,
+          dir: row.direction,
+          schedule: schedule
+        };
       });
 
-      // 列車描画
-      const trainGroups = svg.selectAll(".train")
-        .data(trains)
-        .enter()
+      // 列車アイコン (gグループ)
+      const trainElems = svg.selectAll(".train")
+        .data(trains).enter()
         .append("g")
-        .attr("class", "train");
+        .attr("class","train")
+        .attr("transform","translate(-100,-100)");
 
-      trainGroups.each(function(train) {
-        const g = d3.select(this);
-        const style = getTrainStyle(train.name);
+      trainElems.append("polygon")
+        .attr("points","-15,-10 15,0 -15,10")
+        .attr("stroke","black")
+        .attr("stroke-width",1)
+        .attr("fill",d=>getTrainStyle(d.name).fill);
 
-        // === ここだけ修正：長方形＋進行方向にとがり ===
-        const textLen = train.name.length;
-        const w = 14 + textLen * 8;
-        const h = 16;
-        const arrow = 6;
+      trainElems.append("text")
+        .attr("x",0).attr("y",0)
+        .text(d=>d.name)
+        .attr("fill",d=>getTrainStyle(d.name).text);
 
-        let points;
-        if (train.direction === "down") {
-          points = `0,0 ${w},0 ${w+arrow},${h/2} ${w},${h} 0,${h}`;
-        } else {
-          points = `${arrow},0 ${w+arrow},0 ${w+arrow},${h} ${arrow},${h} 0,${h/2}`;
-        }
+      // 座標表をまとめる
+      const coords = {};
+      [...mainCoords,...branchCoords].forEach(d=>coords[d.name]=d);
 
-        g.append("polygon")
-          .attr("points", points)
-          .attr("fill", style.fill)
-          .attr("stroke", "black");
+      // 更新ループ
+      setInterval(()=>{
+        const now = new Date();
+        const nowM = now.getHours()*60+now.getMinutes()+now.getSeconds()/60;
+        timeLabel.text(d3.timeFormat("%H:%M:%S")(now));
 
-        g.append("text")
-          .attr("x", (w+arrow)/2)
-          .attr("y", h/2)
-          .attr("fill", style.text)
-          .attr("class", "train-label")
-          .text(train.name);
-      });
+        trains.forEach((train,i)=>{
+          const stops = Object.entries(train.schedule).filter(([st,t])=>t!=null);
+          stops.sort((a,b)=>a[1]-b[1]);
 
-      // 座標更新関数
-      function updateTrains(time) {
-        trainGroups.each(function(train) {
-          const g = d3.select(this);
-          let prev = null, next = null;
-          for (let i = 0; i < train.stops.length - 1; i++) {
-            if (train.stops[i].time <= time && time <= train.stops[i+1].time) {
-              prev = train.stops[i];
-              next = train.stops[i+1];
+          let pos=null,angle=0;
+          for (let j=0;j<stops.length-1;j++){
+            const [s1,t1]=stops[j];
+            const [s2,t2]=stops[j+1];
+            if (nowM>=t1 && nowM<=t2){
+              const p=(nowM-t1)/(t2-t1);
+              const c1=coords[s1],c2=coords[s2];
+              let x=c1.x+(c2.x-c1.x)*p;
+              let y=c1.y+(c2.y-c1.y)*p;
+
+              // === 修正ポイント ===
+              if (train.dir==="up") {
+                y -= 15; // 上にずらす
+              } else if (train.dir==="down") {
+                y += 15; // 下にずらす
+              }
+
+              pos={x,y};
+              angle=Math.atan2(c2.y-c1.y,c2.x-c1.x)*180/Math.PI;
               break;
             }
           }
-          if (!prev || !next) {
-            g.attr("display", "none");
-            return;
+          if (pos){
+            trainElems.filter((d,idx)=>idx===i)
+              .attr("transform",`translate(${pos.x},${pos.y}) rotate(${angle})`);
+          } else {
+            trainElems.filter((d,idx)=>idx===i)
+              .attr("transform","translate(-100,-100)");
           }
-          g.attr("display", null);
-
-          const ratio = (time - prev.time) / (next.time - prev.time);
-          const px = honStations.includes(prev.station) ? honX(prev.station) : shiX(prev.station);
-          const py = honStations.includes(prev.station) ? honY : shiY;
-          const nx = honStations.includes(next.station) ? honX(next.station) : shiX(next.station);
-          const ny = honStations.includes(next.station) ? honY : shiY;
-          const x = px + (nx - px) * ratio;
-          const y = py + (ny - py) * ratio;
-
-          g.attr("transform", `translate(${x},${y-10})`);
         });
-      }
-
-      // 時刻進行
-      let curTime = 1700;
-      d3.interval(() => {
-        updateTrains(curTime);
-        curTime++;
-        if (curTime > 1900) curTime = 1700;
-      }, 500);
+      },1000);
     });
   </script>
 </body>
