--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
       "一畑口","園","湖遊館新駅","布崎","雲州平田","旅伏","美談","大寺","川跡",
       "武志","大津町","科学館前","電鉄出雲市"
     ];
-    // 川跡(支線)に改名して重複を避ける
     const branchStations = ["川跡(支線)","高浜","遥堪","浜山公園北口","出雲大社前"];
 
-    const stationSpacing = 40;  // 駅間隔
+    const stationSpacing = 40;
 
     // 本線座標
     const mainCoords = mainStations.map((d,i)=>({name:d,x:100+i*stationSpacing,y:200}));
-    // 支線座標（川跡から下に降りて平行に）
+    // 支線座標
     const kawatoMain = mainCoords.find(s=>s.name==="川跡");
     const branchCoords = branchStations.map((d,i)=>({
       name:d,
@@ -42,7 +41,7 @@
     }));
     branchCoords[0].x = kawatoMain.x;
 
-    // 線を描画
+    // 路線を描画
     svg.append("polyline")
       .attr("points", mainCoords.map(d=>`${d.x},${d.y}`).join(" "))
       .attr("class","line");
@@ -68,7 +67,7 @@
       .attr("x",d=>d.x).attr("y",d=>d.y+20)
       .text(d=>d.name).attr("class","station");
 
-    // 時刻を分に変換 (hhmm → 分)
+    // hhmm → 分に変換
     function parseTime(val) {
       if (!val || isNaN(val)) return null;
       const num = parseInt(val);
@@ -77,7 +76,7 @@
       return hh*60+mm;
     }
 
-    // 列車の色と文字色を決定
+    // 列車スタイル
     function getTrainStyle(name) {
       if (name.includes("A")) return {fill: "red", text: "white"};
       if (name.includes("B")) return {fill: "green", text: "white"};
@@ -91,21 +90,22 @@
       return {fill: "gray", text: "white"};
     }
 
-    // 現在時刻をラベル表示
+    // 時刻ラベル
     const timeLabel = svg.append("text")
       .attr("x",width/2).attr("y",50)
       .attr("class","time-label");
 
-    // 列車読み込み
+    // 列車データ読み込み
     d3.csv("trains.csv").then(data=>{
       const trains = data.map(row=>{
         const schedule = {};
+        let kawatoCount = 0; // 川跡の出現順を管理
         Object.keys(row).forEach(k=>{
           if (k!=="train_id" && k!=="train_name" && k!=="direction") {
             let stationName = k;
-            // CSVの支線の「川跡」は branch の川跡に対応させる
-            if (stationName==="川跡" && row["高浜"]!==undefined) {
-              stationName="川跡(支線)";
+            if (stationName==="川跡") {
+              kawatoCount++;
+              if (kawatoCount===2) stationName="川跡(支線)"; // 2回目の川跡は支線
             }
             schedule[stationName] = parseTime(row[k]);
           }
@@ -118,7 +118,7 @@
         };
       });
 
-      // 列車アイコン (gグループ)
+      // 列車アイコン
       const trainElems = svg.selectAll(".train")
         .data(trains).enter()
         .append("g")
@@ -141,7 +141,7 @@
         .text(d=>d.name)
         .attr("fill",d=>getTrainStyle(d.name).text);
 
-      // 座標表をまとめる
+      // 座標表
       const coords = {};
       [...mainCoords,...branchCoords].forEach(d=>coords[d.name]=d);
 
@@ -164,7 +164,7 @@
               const c1=coords[s1],c2=coords[s2];
               if (c1 && c2){
                 const x=c1.x+(c2.x-c1.x)*p;
-                const y=c1.y+(c2.y-c1.y)*p + (train.dir==="up" ? -15 : 15); // upは上側, downは下側
+                const y=c1.y+(c2.y-c1.y)*p + (train.dir==="up" ? -15 : 15);
                 pos={x,y};
                 angle=Math.atan2(c2.y-c1.y,c2.x-c1.x)*180/Math.PI;
               }
